# seri

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
include/avakar/: seri.h
include/avakar/seri/: endian.h  packed_int.h  serialize.h  stdint.h  store.h
src/: bswap.h  seri.natvis
test/: test1.cpp
